[project]
name = "qcc-preprocess"
version = "0.1.0"
description = "Circuit preprocessing for 2-qubit gate reduction"
license = {text = "CC0-1.0"}
requires-python = ">=3.10"
dependencies = [
	"networkx",
	"qiskit>=1.0",
	"pylatexenc",
	"pyzx",
	"matplotlib",
	"pandas==2.3.3",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
include = ["circuit_preprocess*"]
